Version 6.18.14
TODO
    - Allow to customize 'redirect_uri' (pull request #179 from jerome-pouiller/master)
    - remove "Labels" before deleting uid (pull request #175 from ewft/fix_gmail_deletion)
    - Redact real email in test data (pull request #170 from h3xx/remove-email)

Version 6.18.13
22 August 2023
    - not doing python2 tests any more
    - #169 failure to recover corrupt message
    - #168 LookupError: unknown encoding: unicode
    - #167 from cclauss/ruff (lint python code with ruff)
    - #166 help about write access to oauth2 token file
    - bring getmail and getmails rc file filtering in sync
    - #160 from MatthiasPetermann/master (Enable overriding the prompt parameter in the XOAUTH URL)
    - #158 from horrad/master (Ignore directories in getmailrcdir)

Version 6.18.12
21 January 2023
    - #156 Continue after error in child
    - #157 undo #148 getmails shell quoting

Version 6.18.11
1 January 2023
    - #149 (h3xx/fix-shell-quote) added ability to process token creation on a headless server (device without a browser)
    - #146 (ykasap/appperms) Fix shell quoting issue
    - #145 add "offline_access" permission in Example 13 docs/getmailrc-examples (Exchange Online)
    - #141 add documentation for --searchset/-s
    - #142 dont consider hidden files as config file (if no --rcfile)
    - #138 (ChrisTG742) partial fix for #135 (getmail-gmail-xoauth-tokens errors are confusing)
      HTTP exception handling for GET requests
    - #134 (ChrisTG742) fix #129 (MDA_external: screen output of called script silently dropped)
      new option "pipe_stdout" to the [destination] settings block
    - #148 getmails shell quoting

Version 6.18.10
20 September 2022
    - readme: mention "app password" for gmail
    - fix #122: Inappropriate error message for external password command
    - fix #125: exclude files ending in .json if no --rcfile
    - pull #131: Update getmailrc-examples (ChrisTG742/getmail6)