@@ -19,7 +19,7 @@ Please refer to the git history regarding who changed what and when in this file
 
 <h1 id="title">getmail Frequently Asked Questions (FAQ)</h1>
 <p class="about">
-    getmail6 is Copyright &copy; 1998-2023 by Charles Cazabon and others:<br>
+    getmail6 is Copyright &copy; 1998-2024 by Charles Cazabon and others:<br>
     &lt;charlesc-getmail @ pyropus.ca&gt;<br>
     &lt;roland.puntaier @ gmail.com&gt;
 </p>
