@@ -68,7 +68,7 @@ include the output of
 .B getmail [options] --dump\fR
 with any bug report.
 .SH COPYRIGHT
-Copyright \(co 1998-2023 Charles Cazabon and others.
+Copyright \(co 1998-2024 Charles Cazabon and others.
 .br
 This is free software; see the file COPYING for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
