@@ -25,7 +25,7 @@ Written by Charles Cazabon and others.
 .SH "REPORTING BUGS"
 Report bugs to <https://github.com/getmail6/getmail6/issues>
 .SH COPYRIGHT
-Copyright \(co 1998-2023 Charles Cazabon and others.
+Copyright \(co 1998-2024 Charles Cazabon and others.
 .br
 This is free software; see the file COPYING for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
