@@ -2,7 +2,7 @@
 ignore-words-list = "fpr,hepler,loos,te,thrid"
 
 [tool.ruff]
-select = [
+lint.select = [
   "AIR",       # Airflow
   "ASYNC",     # flake8-async
   "B",         # flake8-bugbear
@@ -58,7 +58,7 @@ select = [
   # "TRY",     # tryceratops
   # "UP",      # pyupgrade
 ]
-ignore = [
+lint.ignore = [
   "B007",
   "B904",
   "E401",
@@ -79,16 +79,16 @@ ignore = [
 line-length = 142
 target-version = "py37"
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 max-complexity = 16
 
-[tool.ruff.pylint]
+[tool.ruff.lint.pylint]
 allow-magic-value-types = ["bytes", "int", "str"]
 max-args = 11
 max-branches = 20
 max-returns = 7
 max-statements = 56
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["E402"]
 "test/*" = ["S101"]
